force-app/main/default/objects/Availability__c/fields/Availability_End__c.field-meta.xml
<CustomField>
    <fullName>Availability_End__c</fullName>
    <label>Availability End</label>
    <type>DateTime</type>
</CustomField>