force-app/main/default/objects/Availability__c/fields/Availability_Start__c.field-meta.xml
<CustomField>
    <fullName>Availability_Start__c</fullName>
    <label>Availability Start</label>
    <type>DateTime</type>
</CustomField>