force-app/main/default/objects/Availability__c/fields/Session_Location__c.field-meta.xml
<CustomField>
    <fullName>Session_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Location</label>
    <referenceTo>Session_Location__c</referenceTo>
    <relationshipLabel>Availability Slots</relationshipLabel>
    <relationshipName>Availability_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>