force-app/main/default/objects/Availability__c/fields/Session_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Session_Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Speaker</label>
    <referenceTo>Session_Speaker__c</referenceTo>
    <relationshipLabel>Availability Slots</relationshipLabel>
    <relationshipName>Availability_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>